added <debug> files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 # Ignore the NODEJS installed modules
 # (correct way to install them is with NPM and "package.json")
 node_modules
+
+# Ignore all debug files for the PIC microcontrollers
+debug
+
