--- a/SERVERS/EJERCICIO_03_NODE/package.json
+++ b/SERVERS/EJERCICIO_03_NODE/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Santiago Garcia Arango",
@@ -11,5 +13,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
