--- a/SERVERS/EJERCICIO_04_TALLER_FINAL/package.json
+++ b/SERVERS/EJERCICIO_04_TALLER_FINAL/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
