--- a/SERVERS/EJERCICIO_05_PROYECTO_FINAL/package.json
+++ b/SERVERS/EJERCICIO_05_PROYECTO_FINAL/package.json
@@ -4,7 +4,10 @@
   "description": "Simple IOT app integrated with a mysql database",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+
   },
   "keywords": [
     "IOT",
